--- a/SquadApplication/ViewCustom/PolygonsPage.xaml
+++ b/SquadApplication/ViewCustom/PolygonsPage.xaml
@@ -9,6 +9,7 @@
             <StackLayout >
                 <Button 
                        BackgroundColor="DarkGreen"
+                    Command="{Binding AppendPolygonCommand}"
                        Text="Add Polygon">
                     <Button.Triggers>
                         <DataTrigger
