update players page

--- a/SquadApplication/ViewCustom/AppendPolygonPage.xaml
+++ b/SquadApplication/ViewCustom/AppendPolygonPage.xaml
@@ -5,14 +5,14 @@
              BackgroundImageSource="hkauthorize.jpg"
              Title="AppendPolygonPage">
     <VerticalStackLayout VerticalOptions="Center" HorizontalOptions="Center" Padding="10">
-        <HorizontalStackLayout>
-        <Label Text="Name"/>
-        <Entry Placeholder="Name" PlaceholderColor="Gray"/>
+        <HorizontalStackLayout >
+        <Label Text="Name" TextColor="AliceBlue" FontSize="30"/>
+            <Entry Margin="10,-12,0,0" Placeholder="NamePolygon" FontSize="30" PlaceholderColor="Gray"/>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout>
-        <Label Text="Coordinates"/>
-            <Entry PlaceholderColor="Grey" Placeholder="60.043010, 30.104596"/>
+            <Label Text="Coordinates" TextColor="AliceBlue" FontSize="20"/>
+            <Entry Margin="10,-12,0,0" PlaceholderColor="Grey" FontSize="20" Placeholder="60.043010, 30.104596"/>
         </HorizontalStackLayout>
         <Button VerticalOptions="End" Command="{Binding AppendPolygonCommand}"/>
     </VerticalStackLayout>
