--- a/SquadApplication/AppShell.xaml
+++ b/SquadApplication/AppShell.xaml
@@ -7,6 +7,7 @@
     Title="SquadApplication">
 
     <ShellContent
+        x:Name="HomeShellContent"
         Title="Home"
         ContentTemplate="{DataTemplate local:AuthorizedPage}"
         Route="AuthorizedPage" />
